<resources>
    <string name="app_name">SelectPic</string>
    <string name="select_only">You can select only Nine images</string>
    <string name="backtohome">Back to home</string>
    <string name="Dywtbh">Do you want back to home?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="image_not_found">image not found</string>
    <string name="something_went_wrong">something went wrong</string>





    <string name="pswap">Swap</string>
    <string name="pmirror">Mirror</string>
    <string name="pflip">Flip</string>
    <string name="protate">Rotate</string>
    <string name="pzoomplus">Zoom</string>
    <string name="pleft">Left</string>
    <string name="pright">Right</string>
    <string name="pup">Up</string>
    <string name="pdown">Down</string>
    <string name="pchange">Change</string>
    <string name="border">Border</string>
    <string name="corner">Corner</string>
    <string name="selectsingleimage">Select image to apply changes</string>
</resources>